tests/NormalTests/paczka1/fuzzy1/44065957.err
Error in line 1: S559 S3 57,3
Error in line 4: nyi2F2oNq A106 81,1
Error in line 12: yjex S867 88,7
Error in line 22: S559 S559 50,2
Error in line 33: nyi2F2oNq S559 10,2
